# aai-cli

./: .gitignore  README.md  pyproject.toml
aai_cli/: __init__.py  agent.py  audio.py  cli.py  datasets.py  display.py  eval.py  optimizer.py  prompts.yaml  repl.py  service.py  streaming.py  tools.py  tools_eval.py  tools_filesystem.py  tools_scaffold.py  tools_search.py  transcribe.py  types.py
aai_cli/conf/: config.yaml
aai_cli/templates/: gradio_app.py.tmpl  system_prompt.txt  voice_agent.py.tmpl
tests/: conftest.py  test_agent.py  test_audio.py  test_cli.py  test_datasets.py  test_display.py  test_eval.py  test_optimizer.py  test_repl.py  test_service.py  test_streaming.py  test_tools.py  test_tools_eval.py  test_tools_filesystem.py  test_tools_scaffold.py  test_tools_search.py  test_transcribe.py
