[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aai-cli"
version = "0.1.0"
description = "Optimize AssemblyAI universal-3-pro prompts using OPRO"
authors = [{name = "Alex Kroman", email = "alex@alexkroman.com"}]
license = "MIT"
readme = "README.md"
keywords = ["assemblyai", "asr", "speech-recognition", "opro", "prompt-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "rich>=13.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "whisper-normalizer>=0.1",
    "datasets[audio]>=2.14",
    "assemblyai>=0.30",
    "openai>=1.0",
    "jiwer>=3.0",
    "pyfiglet>=1.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/alexkroman/aai-cli"
Repository = "https://github.com/alexkroman/aai-cli"
"Bug Tracker" = "https://github.com/alexkroman/aai-cli/issues"

[project.scripts]
aai = "aai_cli.cli:app"

[tool.poetry]
packages = [{include = "aai_cli"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"
pyright = ">=1.1.0"
pre-commit = ">=3.0.0"
bandit = ">=1.7.0"
poethepoet = ">=0.25"

# --------------------------------------------------------------------------- #
#  Poe (task runner)
# --------------------------------------------------------------------------- #
[tool.poe.tasks]
lint      = "ruff check aai_cli tests"
format    = "ruff format aai_cli tests"
typecheck = "pyright aai_cli"
test      = "pytest"
security  = "bandit -r aai_cli"

[tool.poe.tasks.check]
sequence = ["format", "lint", "typecheck", "test"]
help     = "Run format, lint, typecheck, and tests"

# --------------------------------------------------------------------------- #
#  Ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
extend-ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B905", # zip() without an explicit strict= parameter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# --------------------------------------------------------------------------- #
#  mypy
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["whisper_normalizer.*", "assemblyai.*"]
ignore_errors = true

# --------------------------------------------------------------------------- #
#  Pyright
# --------------------------------------------------------------------------- #
[tool.pyright]
include = ["aai_cli"]
exclude = ["**/node_modules", "**/__pycache__", "outputs", ".venv", "venv"]
typeCheckingMode = "basic"
reportMissingImports = false
reportPrivateImportUsage = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportIndexIssue = false
reportAssignmentType = false
reportArgumentType = false
reportReturnType = false

# --------------------------------------------------------------------------- #
#  pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -s --tb=short"
testpaths = ["tests"]
norecursedirs = ["outputs", ".venv", "venv", ".git", "__pycache__", "*.egg-info"]

# --------------------------------------------------------------------------- #
#  bandit
# --------------------------------------------------------------------------- #
[tool.bandit]
skips = ["B602", "B108"]
